# basketball-manager

./: .gitignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  COACHING_GUIDE.md  CONTRIBUTING.md  GAME_READY.md  GETTING_STARTED.md  INTERACTIVE_MODE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_SUMMARY.txt  README.md  basketball-manager.sln  build.sh  test_coaching.sh  test_features.sh
.github/: README.md
.github/workflows/: ci.yml  release.yml
bm-core/: CMakeLists.txt  README.md
bm-core/include/: BasketballManager.h
bm-core/include/ai/: AICoordinator.h  TacticAI.h
bm-core/include/bindings/: UnityBridge.h
bm-core/include/common/: Types.h
bm-core/include/db/: DatabaseLoader.h  DatabaseManager.h
bm-core/include/engine/: CourtVisualizer.h  MatchEngine.h  SeasonManager.h  SimulationManager.h  TacticalManager.h
bm-core/include/lua/: LuaBindings.h  LuaRulesEngine.h
bm-core/include/player/: PlayerGenerator.h
bm-core/include/stats/: StatisticsEngine.h
bm-core/src/: main.cpp
bm-core/src/ai/: AICoordinator.cpp  TacticAI.cpp
bm-core/src/bindings/: UnityBridge.cpp
bm-core/src/db/: DatabaseLoader.cpp  DatabaseManager.cpp
bm-core/src/engine/: CourtVisualizer.cpp  MatchEngine.cpp  SeasonManager.cpp  SimulationManager.cpp  TacticalManager.cpp
bm-core/src/lua/: LuaBindings.cpp  LuaRulesEngine.cpp
bm-core/src/player/: PlayerGenerator.cpp
bm-core/src/stats/: StatisticsEngine.cpp
bm-data/ncaa-2025/: ncaa_rules.lua  recruiting.lua
bm-data/schema/: schema.lua
bm-tools/: CMakeLists.txt
bm-tools/NCAAImporter/: NCAAImporter.csproj  Program.cs  README.md  StatConverter.cs
bm-tools/NCAAImporter/Models/: NCAATeamStats.cs
bm-tools/data-importer/: main.cpp
bm-tools/match-simulator/: CMakeLists.txt  simulate_match.cpp
bm-tools/mod-validator/: main.cpp
bm-tools/ncaa-scraper/: import_nba_rosters.py  scrape_nba_rosters.py  scrape_rosters.py  test_scraper.py
bm-tools/player-generator/: CMakeLists.txt  generate_players.cpp
bm-ui/: BMUnityBridge.cs
docs/: ARCHITECTURE.md  MODDING.md  PHASE3_TESTING_REPORT.md  README.md  UI_ROADMAP.md
mods/example-mod/: mod.json
mods/example-mod/data/: players.json  teams.json
mods/example-mod/rules/: schedule.lua
